<resources>
    <string name="app_name">CatalogueMovie</string>
    <string name="description">Description</string>
    <string name="heading">Heading</string>
    <string name="searc_bar_hint">Search movies by title…</string>
    <string name="movies_found"> movies found</string>
    <string name="poster_movies">Poster Movies</string>

    <string name="title_bottom_nav1">Home</string>
    <string name="title_bottom_nav2">Upcoming</string>
    <string name="title_bottom_nav3">Now Playing</string>
    <string name="title_bottom_nav4">Favorite</string>
    <string name="rate_average">Rate Average</string>
    <string name="rate_count">Rate Count</string>
    <string name="release_date">Release Date</string>
    <string name="poster">Poster</string>
    <string name="title_home">Catalogue Movies - Search</string>
    <string name="title_upcoming">Upcoming Movies</string>
    <string name="title_nowplaying">Now Playing Movies</string>
    <string name="title_favorite">Favorite Movies</string>
    <string name="hint_seacrh_movies">Search movies here…</string>
    <string name="loading_data">Loading data…</string>
    <string name="no_movies_found">No movies found.</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="favorite">Favorite</string>
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium eros vel mattis sagittis. Nullam ipsum enim, aliquam et massa dictum, finibus finibus lacus. Aenean lectus sapien, luctus eu quam sed, blandit luctus mi. Aenean vitae nulla sed tellus imperdiet mattis. Praesent rutrum dui vel pretium maximus. Phasellus sed massa tempor, posuere nisl sit amet, lacinia ligula. Nam cursus congue orci. Aenean in mauris felis.</string>

</resources>
